# cellular-automata

./: .gitignore  README.md
combinations/python/: pyproject.toml
python/: Dockerfile
python/cellular_automata/: pyproject.toml
python/cellular_automata/cellular_automata/: __init__.py  ca.py  rules.py  server.py
python/cellular_automata/cellular_automata/combinations/: __init__.py  combinations.py
python/cellular_automata/cellular_automata/tests/: test_combinations.py
python/cellular_automata/tests/: test_cellular_automata.py
rust/: Cargo.toml  Dockerfile  README.md
rust/.devcontainer/: devcontainer.json
rust/src/: ca.rs  main.rs  models.rs
