[tool.poetry]
name = "python-combinations-ca"
version = "0.1.0"
description = "Simple combinations cellular automata in python"
authors = ["Daniel Holland <danielholland414@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
