[tool.poetry]
name = "cellular_automata"
version = "0.1.0"
description = "Implementation of elementary cellular automata in python."
authors = ["Daniel Holland <danielholland414@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = { version = "^1.1", optional = true }
click = { version = "^7.1.2", optional = true }

[tool.poetry.extras]
serve = ["Flask", "click"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.0"

[tool.poetry.scripts]
serve = "cellular_automata.server:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
